--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <section class=" " id="hero">
       <div class="section-container pt-16 mb-10">
         <img src="./images/logo.svg" alt="" class="mx-auto my-16" />
-        <h1 class="section-h1">A history of everything you copy</h1>
+        <h1 class="section-h1">Keeping track of everything you copy</h1>
+
         <p class="section-content">
-          Clipboard allows you to track and organize everything you copy.
+          Document Keeper allows you to track and organize everything you copy.
           Instantly access your clipboard on all your devices.
         </p>
 
@@ -46,9 +47,9 @@
       <div class="section-container pt-16 mb-10">
         <h1 class="section-h1">Keep track of your snippets</h1>
         <p class="section-content sm:text-xl">
-          Clipboard instantly stores any item you copy in the cloud, meaning you
-          can access your snippets immediately on all your devices. Our Mac and
-          iOS apps will help you organize everything.
+          Document Keeper instantly stores any item you copy in the cloud,
+          meaning you can access your snippets immediately on all your devices.
+          Our Mac and iOS apps will help you organize everything.
         </p>
       </div>
     </section>
@@ -73,7 +74,7 @@
             Instantly saves and syncs snippets across all your devices.
           </p>
           <h3 class="text-2xl font-bold text-slate-700 pb-2">
-            Completely History
+            Complete History
           </h3>
           <p class="text-xl text-grayishBlue pb-12">
             Retrieve any snippets from the first moment you started using the
@@ -87,9 +88,10 @@
     <!-- Access section starts here  -->
     <section class=" " id="access">
       <div class="section-container pt-6 mb-10">
-        <h1 class="section-h1">Access Clipboard Anywhere</h1>
+        <h1 class="section-h1">Access Document Keeper Anywhere</h1>
         <p class="section-content sm:text-xl">
-         Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
+          Whether you’re on the go, or at your computer, you can access all your
+          Document Keeper snippets in a few simple clicks.
         </p>
         <img
           src="./images/image-devices.png"
@@ -99,5 +101,146 @@
       </div>
     </section>
     <!-- Access section ends here-->
+
+    <!-- Productivity section starts here  -->
+    <section class=" " id="Productivity">
+      <div class="section-container pt-6 mb-10">
+        <h1 class="section-h1">Boost Your Productivity</h1>
+        <p class="section-content sm:text-xl">
+          StampBoard provides the tools you need to supercharge your workflow.
+        </p>
+
+        <div
+          class="flex flex-col justify-center md:gap-10 md:flex-row md:pt-24 pt-16 items-center"
+        >
+          <!-- item------1 -->
+          <div class="flex flex-col md:w-80 justify-center items-center">
+            <img src="./images/icon-blacklist.svg" alt="" class="pb-10" />
+            <h3 class="text-xl font-bold text-slate-700 pb-2">
+              Create Blacklists
+            </h3>
+            <p class="text-md pb-12 text-grayishBlue">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <!-- item------2 -->
+          <div class="flex flex-col md:w-80 justify-center items-center">
+            <img src="./images/icon-text.svg" alt="" class="pb-10" />
+            <h3 class="text-xl font-bold text-slate-700 pb-2">
+              Plain Text Snippets
+            </h3>
+            <p class="text-md pb-12 text-grayishBlue">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </div>
+          <!-- item------3-->
+          <div class="flex flex-col md:w-80 justify-center items-center">
+            <img src="./images/icon-preview.svg" alt="" class="pb-10" />
+            <h3 class="text-xl font-bold text-slate-700 pb-2">Sneak Preview</h3>
+            <p class="text-md pb-12 text-grayishBlue">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Productivity section ends here-->
+
+    <!-- Productivity section starts here  -->
+    <section class=" " id="Productivity">
+      <div class="section-container pt-6 mb-10">
+        <div
+          class="flex flex-col justify-center items-center md:flex-row space-y-16 md:space-y-0 md:space-x-20"
+        >
+          <img src="./images/logo-google.png" alt="" />
+          <img src="./images/logo-microsoft.png" alt="" />
+          <img src="./images/logo-hp.png" alt="" />
+          <img src="./images/logo-vector-graphics.png" alt="" />
+          <img src="./images/logo-ibm.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Productivity section ends here-->
+
+    <!-- Download section starts here  -->
+    <section class=" " id="download">
+      <div class="section-container pt-16 mb-10">
+        <h1 class="section-h1">Clipboard for iOS and MacOS</h1>
+
+        <p class="section-content sm:text-xl">
+          Available for free on the App Store. Download for Mac or iOS, sync
+          with iCloud and you're ready to start adding to your clipboard.
+        </p>
+
+        <div
+          class="flex flex-col justify-center mx-auto w-full py-14 space-y-6 md:flex-row md:space-y-0 md:max-w-lg md:space-x-5"
+        >
+          <button
+            class="bg-strongCyan rounded-full w-full px-8 p-3 md:p-4 mx-auto text-white duration-500 shadow-lg hover:opacity-80"
+          >
+            <p class="text-xl">Download for iOS</p>
+          </button>
+          <button
+            class="bg-lightBlue rounded-full w-full px-8 p-3 md:p-4 mx-auto text-white duration-500 shadow-lg hover:opacity-80"
+          >
+            <p class="text-xl">Download for Mac</p>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- Download section ends -->
+
+    <!-- footer section starts here  -->
+    <footer id="footer">
+      <div class="bg-slate-100 text-slate-400 p-10">
+        <div
+          class="section-container flex flex-col md:flex-row justify-around items-center"
+        >
+          <img src="./images/logo.svg" alt="" class="w-16" />
+
+          <div class="py-10 md:py-0">
+            <ul
+              class="text-center space-y-3 md:space-y-0 md:grid md:grid-cols-3 gap-6 md:text-start"
+            >
+              <li><a href="#faqs" class="hover-effect col-span-2">FAQs</a></li>
+              <li><a href="#contact" class="hover-effect">Contact Us</a></li>
+              <li>
+                <a href="#privacy" class="hover-effect">Privacy Policy</a>
+              </li>
+              <li><a href="#press" class="hover-effect">Press Kit</a></li>
+              <li><a href="#install" class="hover-effect">Install Guide</a></li>
+            </ul>
+          </div>
+
+          <div class="flex items-center justify-center space-x-4">
+            <a href="#" class="hover-effect">
+              <img
+                src="./images/icons8-instagram.svg"
+                alt=""
+                class="w-6 ficon"
+              />
+            </a>
+            <a href="#" class="hover-effect">
+              <img
+                src="./images/icons8-facebook.svg"
+                alt=""
+                class="w-6 ficon"
+              />
+            </a>
+            <a href="#" class="hover-effect">
+              <img
+                src="./images/icons8-twitterx.svg"
+                alt=""
+                class="w-6 ficon"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section ends -->
   </body>
 </html>
