--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>StampBoard</title>
   </head>
-  <body class="border">
+  <body class="">
     <!-- hero section starts here  -->
     <section class=" " id="hero">
       <div class="section-container pt-16 mb-10">
@@ -150,9 +150,9 @@
 
     <!-- Productivity section starts here  -->
     <section class=" " id="Productivity">
-      <div class="section-container pt-6 mb-10">
+      <div class=" pt-6 mb-10 ">
         <div
-          class="flex flex-col justify-center items-center md:flex-row space-y-16 md:space-y-0 md:space-x-20"
+          class="section-container flex flex-col md:flex-row justify-around items-center space-y-10 md:space-y-0 "
         >
           <img src="./images/logo-google.png" alt="" />
           <img src="./images/logo-microsoft.png" alt="" />
@@ -195,16 +195,14 @@
 
     <!-- footer section starts here  -->
     <footer id="footer">
-      <div class="bg-slate-100 text-slate-400 p-10">
+      <div class="bg-slate-100 text-slate-400 p-10 ">
         <div
           class="section-container flex flex-col md:flex-row justify-around items-center"
         >
           <img src="./images/logo.svg" alt="" class="w-16" />
 
-          <div class="py-10 md:py-0">
-            <ul
-              class="text-center space-y-3 md:space-y-0 md:grid md:grid-cols-3 gap-6 md:text-start"
-            >
+          <div class="py-10 md:py-0 ">
+            <ul class="text-center space-y-3 md:space-y-0 md:grid md:grid-cols-3 gap-6 md:text-start">
               <li><a href="#faqs" class="hover-effect col-span-2">FAQs</a></li>
               <li><a href="#contact" class="hover-effect">Contact Us</a></li>
               <li>
